--- a/Crossover.Builder/Crossover.Builder.Server/App.config
+++ b/Crossover.Builder/Crossover.Builder.Server/App.config
@@ -2,9 +2,7 @@
 
 <configuration>
   <configSections>
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   
   <startup>
@@ -17,9 +15,7 @@
   </appSettings>
   
   <connectionStrings>
-    <add name="UsersDatabase"
-         connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=CrossoverBuilderUsersDatabase;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+    <add name="UsersDatabase" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=CrossoverBuilderUsersDatabase;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <runtime>
@@ -45,8 +41,7 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient"
-                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
