--- a/Crossover.Builder/Crossover.Builder.Server/packages.config
+++ b/Crossover.Builder/Crossover.Builder.Server/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="jQuery" version="2.1.4" targetFramework="net45" />
+  <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
@@ -12,11 +14,13 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
