--- a/Crossover.Builder/Crossover.Builder.Server/Crossover.Builder.Server.csproj
+++ b/Crossover.Builder/Crossover.Builder.Server/Crossover.Builder.Server.csproj
@@ -149,23 +149,57 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Content\bootstrap-theme.css.map" />
+    <None Include="Content\bootstrap.css.map" />
+    <None Include="fonts\glyphicons-halflings-regular.eot" />
+    <None Include="fonts\glyphicons-halflings-regular.ttf" />
+    <None Include="fonts\glyphicons-halflings-regular.woff" />
+    <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="packages.config" />
     <None Include="Scripts\jquery-2.1.4.min.map" />
+    <None Include="Site\Content\bootstrap-theme.css.map" />
+    <None Include="Site\Content\bootstrap.css.map" />
+    <None Include="Site\Scripts\jquery-2.1.4.min.map" />
+    <None Include="Site\Scripts\jquery.min.map" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Icon.png" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\knockout-3.3.0.debug.js" />
     <Content Include="Scripts\knockout-3.3.0.js" />
-    <Content Include="Site\index.html">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Scripts\npm.js" />
+    <Content Include="Site\Content\bootstrap-theme.css" />
+    <Content Include="Site\Content\bootstrap-theme.min.css" />
+    <Content Include="Site\Content\bootstrap.css" />
+    <Content Include="Site\Content\bootstrap.min.css" />
+    <Content Include="Site\index.html" />
+    <Content Include="Site\Scripts\bootstrap.js" />
+    <Content Include="Site\Scripts\bootstrap.min.js" />
+    <Content Include="Site\Scripts\index.js" />
+    <Content Include="Site\Content\main.css" />
+    <Content Include="Site\Scripts\jquery-2.1.4.intellisense.js" />
+    <Content Include="Site\Scripts\jquery-2.1.4.js" />
+    <Content Include="Site\Scripts\jquery-2.1.4.min.js" />
+    <Content Include="Site\Scripts\knockout-3.3.0.debug.js" />
+    <Content Include="Site\Scripts\knockout-3.3.0.js" />
+    <Content Include="Site\Scripts\npm.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)Scripts" "$(TargetDir)Site\Scripts\" /F /Y</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(ProjectDir)Site\*" "$(TargetDir)Site\" /F /Y /S /I
+xcopy "$(ProjectDir)Scripts\*" "$(TargetDir)Site\Scripts\" /F /Y /S /I
+xcopy "$(ProjectDir)Content\*" "$(TargetDir)Site\Content\" /F /Y /S /I
+</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
